--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,8 @@
 {
-	"arrowParens": "avoid",
-	"useTabs": true,
-	"singleQuote": true,
-	"bracketSpacing": true,
-	"tabWidth": 2,
-	"trailingComma": "es5",
-	"semi": true
+  "arrowParens": "avoid",
+  "useTabs": false,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "trailingComma": "es5",
+  "semi": true
 }
