--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "useTabs": false,
   "singleQuote": true,
   "bracketSpacing": true,
+  "tabWidth": 4,
   "trailingComma": "es5",
   "semi": true
 }
